# Dataruns

./: .gitignore  INIT_FILES_SUMMARY.md  Notice.txt  README.md  TODO.txt  dist.md  outline.txt  pyproject.toml
dataruns/: __init__.py
dataruns/core/: __init__.py  pipeline.py  transforms.py
dataruns/source/: __init__.py  datasource.py
examples/: basic_usage_examples.ipynb  comprehensive_transform_examples.ipynb  transform_examples.ipynb
src/dataruns/: __init__.py
src/dataruns/core/: __init__.py  pipeline.py  transforms.py  types.py
src/dataruns/dl/: engine.py
src/dataruns/source/: __init__.py  datasource.py
tests/: test.ipynb  test_core_functionality.py  test_init_files.py  test_simple_init.py  test_transforms.py
