[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataruns"
version = "1.0.dev"
description = "A library with Pandas-Like api used for data manipulation and function pipeline execution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.2.5",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
]

authors = [
    {name = "Daniel"}
]

license = {text = "MIT"}

[project.urls]
"Bug Tracker" = "https://github.com/DanielUgoAli/Dataruns/issues"  
"Source Code" = "https://github.com/DanielUgoAli/Dataruns"  


[tool.setuptools.packages.find]
where = ["src"]
